--- a/.env.base
+++ b/.env.base
@@ -9,7 +9,8 @@ DD_API_KEY=
 DATADOG_API_KEY=
 
 # Redis
-REDIS_DSN=redis://redis:6379/0
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/1
 
 # App
 PYTHONPATH=/app/src
