[Incomplete] Starting to integrate with local agent as intermediary.

--- a/.env.base
+++ b/.env.base
@@ -6,7 +6,9 @@ DD_LANGCHAIN_SPAN_PROMPT_COMPLETION_SAMPLE_RATE=0
 DD_OPENAI_LOGS_ENABLED=false
 DD_OPENAI_SPAN_PROMPT_COMPLETION_SAMPLE_RATE=0
 DD_API_KEY=
-DATADOG_API_KEY=
+DD_SITE=datadoghq.eu
+DD_ENV=dev
+DD_LOGS_ENABLED=true
 
 # Redis
 CELERY_BROKER_URL=redis://redis:6379/0
