--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,22 @@ services:
     container_name: redis
     ports:
       - "6379:6379"
+    labels:
+      com.datadoghq.ad.logs: '[{"source": "redis", "service": "redis"}]'
+
+  datadog-agent:
+    image: gcr.io/datadoghq/agent:7
+    hostname: datadog-agent
+    container_name: datadog-agent
+#    pid: host
+    env_file:
+      - ".env.base"
+      - ".env"
+    volumes:
+     - /var/run/docker.sock:/var/run/docker.sock
+     - /proc/:/host/proc/:ro
+     - /sys/fs/cgroup:/host/sys/fs/cgroup:ro
+     - /var/lib/docker/containers:/var/lib/docker/containers:ro
 
   worker:
     build: .
@@ -18,6 +34,8 @@ services:
         - action: sync+restart
           path: ./src
           target: /app/src
+    labels:
+      com.datadoghq.ad.logs: '[{"source": "app", "service": "worker"}]'
 
   nagger:
     build: .
@@ -31,3 +49,5 @@ services:
         - action: sync+restart
           path: ./src
           target: /app/src
+    labels:
+      com.datadoghq.ad.logs: '[{"source": "app", "service": "nagger"}]'
