Agent able to send traces to Datadog Cloud

--- a/.env.base
+++ b/.env.base
@@ -1,5 +1,6 @@
 # Datadog
 DD_TRACE_ENABLED=true
+DD_CELERY_DISTRIBUTED_TRACING=true
 # Disable DD prompt logging
 DD_LANGCHAIN_LOGS_ENABLED=false
 DD_LANGCHAIN_SPAN_PROMPT_COMPLETION_SAMPLE_RATE=0
@@ -9,6 +10,7 @@ DD_API_KEY=
 DD_SITE=datadoghq.eu
 DD_ENV=dev
 DD_LOGS_ENABLED=true
+DD_AGENT_HOST=datadog-agent
 
 # Redis
 CELERY_BROKER_URL=redis://redis:6379/0
