Decreasing aggregator buffer size.

--- a/.env.base
+++ b/.env.base
@@ -11,6 +11,7 @@ DD_SITE=datadoghq.eu
 DD_ENV=dev
 DD_LOGS_ENABLED=true
 DD_AGENT_HOST=datadog-agent
+DD_AGGREGATOR_BUFFER_SIZE=3
 
 # Redis
 CELERY_BROKER_URL=redis://redis:6379/0
