--- a/.env.base
+++ b/.env.base
@@ -1,6 +1,9 @@
 # Datadog
 DD_TRACE_ENABLED=true
 DD_CELERY_DISTRIBUTED_TRACING=true
+DD_INSTRUMENTATION_TELEMETRY_ENABLED=true
+DD_RUNTIME_METRICS_ENABLED=true
+DD_TRACE_OTEL_ENABLED=true
 # Disable DD prompt logging
 DD_LANGCHAIN_LOGS_ENABLED=false
 DD_LANGCHAIN_SPAN_PROMPT_COMPLETION_SAMPLE_RATE=0
